--- a/app/bower.json
+++ b/app/bower.json
@@ -22,6 +22,7 @@
     "jquery": "^2.2.0",
     "bootstrap": "^3.3.6",
     "d3": "^3.5.16",
-    "angular-route": "^1.5.0"
+    "angular-route": "^1.5.0",
+    "angular-ui-router": "^0.2.18"
   }
 }
