MOD grunt tasks improved. to run the frontend, just run "grunt build" in /app. this will create a "dist" folder in ../app. now run a http-server/live server/ and you're good to go :)

--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "latest",
+    "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "latest",
